# TERMINUS

./: .gitignore  AGENTS.md  CLAUDE.md  REPO_CONVENTIONS.md  approve_task.py  collapse_check.py  commands.md  instruction_audit.py  run_static_checks.py  task_integrity.py  terminus_unified_ground_truth_specification_updated.md  validate_submission_zip.py  verifier_health.py  workflow-prompts.md
personal_docs/feedback/sparse-block-preconditioner/revision_3/submitted-task/environment/: CMakeLists.txt
personal_docs/feedback/sparse-block-preconditioner/revision_3/submitted-task/environment/bsr_n/: layout.cpp
personal_docs/feedback/sparse-block-preconditioner/revision_3/submitted-task/environment/include/: solver_report.h
personal_docs/feedback/sparse-block-preconditioner/revision_3/submitted-task/environment/prec_r/: apply.cpp
tasks/adaptive-mesh-conservation/environment/: CMakeLists.txt  Dockerfile
tasks/adaptive-mesh-conservation/environment/acc_m/: edge_corr.cpp
tasks/adaptive-mesh-conservation/environment/agg_q/: blend.cpp
tasks/adaptive-mesh-conservation/environment/cch_z/: ring.cpp
tasks/adaptive-mesh-conservation/environment/config/: cases.toml
tasks/adaptive-mesh-conservation/environment/docs/: layout.md
tasks/adaptive-mesh-conservation/environment/drv_u/: phases.h  run_blend.cpp  run_refine.cpp
tasks/adaptive-mesh-conservation/environment/include/: audit_emit.h  case_spec.h  flow_record.h  ic_loader.h  vault_layout.h
tasks/adaptive-mesh-conservation/environment/lnk_n/: relate.cpp
tasks/adaptive-mesh-conservation/environment/scripts/: run-matrix.sh  run-replay.sh
tasks/adaptive-mesh-conservation/environment/src/: audit_emit.cpp  case_io.cpp  main.cpp  vault_io.cpp
tasks/adaptive-mesh-conservation/environment/sync_b/: halo.cpp
(+8745 files in other folders)
